--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "node-sass": "^6.0.0",
-    "sass-loader": "^12.1.0"
+    "sass": "^1.35.1",
+    "sass-loader": "^10.2.0"
   }
 }
