--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
     "core-js": "^3.9.1",
+    "fs": "^0.0.1-security",
     "nuxt": "^2.15.3",
     "vue-burger-button": "^0.1.2"
   },
